--- a/Control_Empleados/Control_Empleados.csproj
+++ b/Control_Empleados/Control_Empleados.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>ModeloRRHH.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Control_Empleados.Model.Empleado.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
