--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,13 @@
 *.userprefs
 
 # Build results
+#ESTAS CARPETAS LAS COMENTÉ PORQUE LAS NECESITO
+#x64/
+#x86/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
-x86/
 bld/
 [Bb]in/
 [Oo]bj/
